# SATC-Guard

./: .env.example  LICENSE  README.md  REPRODUCE.md  RUNS.md  pyproject.toml
configs/: experiment.yaml  experiment_v2.yaml  experiment_v2_1.yaml  models.yaml
configs/prompts/v1.0.0/: VERSION  baseline_a.txt  pass2.txt
configs/prompts/v2.0.0/: pass2.txt
configs/prompts/v2.1.0/: pass2.txt
data/manifests/: segments_v1.jsonl
data/manifests/splits/: recording_split_v1.json
results/runs/gpt4o_direct_20260616T101550Z/: hypotheses.jsonl  metrics.json  run_manifest.json
results/runs/gpt4o_guard_20260616T180118Z/: config_snapshot.yaml  hypotheses.jsonl  metrics.json  run_manifest.json
results/runs/gpt4o_guard_v2_1_20260617T161816Z/: errors.jsonl  hypotheses.jsonl  metrics.json  run_manifest.json
results/runs/gpt4o_guard_v2_20260617T113307Z/: hypotheses.jsonl  metrics.json  run_manifest.json
results/runs/mimo_direct_20260616T173746Z/: errors.jsonl  hypotheses.jsonl  metrics.json  run_manifest.json
results/runs/mimo_guard_20260616T192252Z/: errors.jsonl  hypotheses.jsonl  metrics.json  run_manifest.json
results/runs/mimo_guard_v2_1_20260617T221816Z/: config_snapshot.yaml  errors.jsonl  hypotheses.jsonl  metrics.json  run_manifest.json
results/runs/mimo_guard_v2_20260617T160958Z/: config_snapshot.yaml  errors.jsonl  hypotheses.jsonl  metrics.json  run_manifest.json
results/runs/qwen_direct_20260616T130251Z/: errors.jsonl  hypotheses.jsonl
scripts/: 00_prepare_manifest.py  01_slice_audio.py  02_run_inference.py  03_run_eval.py
src/atc_agent/: config.py
(+20 files in other folders)
