[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atc-agent"
version = "0.1.0"
description = "ATCO2 dual-model ASR baseline and SATC-Guard experiment harness"
readme = "projectoverview.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.52.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "jiwer>=3.0.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[project.scripts]
atc-prepare-manifest = "scripts.prepare_manifest:main"
atc-slice-audio = "scripts.slice_audio:main"
atc-run-inference = "scripts.run_inference:main"
atc-run-eval = "scripts.run_eval:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
